[tool.poetry]
name = "mockfeed"
version = "0.1.0"
description = ""
authors = ["dnlzrgz <24715931+dnlzrgz@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.1"}
faker = "^27.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.1"
commitizen = "^3.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
